tests/files/flow_controller_tests/should_run/012.cmdr
//Test subtract with floats
x = 0.1 - 0.2 - 0.3 - 0.4 - 0.5;
println x;
x -= 0.6;
println x;