tests/files/flow_controller_tests/should_fail/009.cmdr
//Should fail on modulo by 0.0 with set
x = 2.0;
x %= 0.0;